--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,26 @@
-welcome to CashLo!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="CashLo - Earn rewards by watching ads and completing tasks!" />
+    <meta name="keywords" content="CashLo, rewards, earn money, tasks, ads" />
+    <title>CashLo - Earn Rewards</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+<div class="container">
+    <h1>Welcome to CashLo</h1>
+    <p>Earn rewards by watching ads and completing tasks!</p>
+    <button class="btn" id="getStartedBtn">Get Started</button>
+</div>
+
+<script>
+    document.getElementById('getStartedBtn').addEventListener('click', () => {
+        alert('Coming Soon!');
+    });
+</script>
+
+</body>
+</html>
